--- a/sd.cabal
+++ b/sd.cabal
@@ -22,13 +22,13 @@ library
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.7 && < 0.6
 
-executable sd
-  default-language:    Haskell2010
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  hs-source-dirs:      app
-  main-is:             Main.hs
-  build-depends:       base
-                     , sd
+-- executable sd
+--   default-language:    Haskell2010
+--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+--   hs-source-dirs:      app
+--   main-is:             Main.hs
+--   build-depends:       base
+--                      , sd
 
 test-suite spec
   default-language:    Haskell2010
