--- a/sd.cabal
+++ b/sd.cabal
@@ -35,7 +35,8 @@ test-suite spec
   ghc-options:         -Wall
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
-  main-is:             LibSpec.hs
+  main-is:             Spec.hs
+  other-modules:       LibSpec
   build-depends:       base
                      , sd
                      , hspec
