--- a/sd.cabal
+++ b/sd.cabal
@@ -19,8 +19,11 @@ library
   ghc-options:         -Wall
   hs-source-dirs:      src
   exposed-modules:     Lib
+  other-modules:       Numeric.SD.Fix
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.7 && < 0.6
+                     , data-fix
+                     , data-reify
 
 -- executable sd
 --   default-language:    Haskell2010
