--- a/sd.cabal
+++ b/sd.cabal
@@ -19,12 +19,12 @@ library
   ghc-options:         -Wall
   hs-source-dirs:      src
   exposed-modules:     Lib
-  other-modules:       Numeric.SD
+                     , Numeric.SD
                      , Numeric.SD.Fix
   build-depends:       base >= 4.7 && < 5
                      , containers >= 0.5.7 && < 0.6
                      , data-fix
-                     , data-reify
+                     , hspec
 
 -- executable sd
 --   default-language:    Haskell2010
@@ -42,6 +42,7 @@ test-suite spec
   main-is:             Spec.hs
   other-modules:       LibSpec
   build-depends:       base
+                     , containers >= 0.5.7 && < 0.6
                      , sd
                      , hspec
                      , QuickCheck
